Update seldon example

--- a/samples/contrib/e2e-outlier-drift-explainer/seldon/seldon_e2e_cifar10.ipynb
+++ b/samples/contrib/e2e-outlier-drift-explainer/seldon/seldon_e2e_cifar10.ipynb
@@ -1075,22 +1075,23 @@
    },
    "outputs": [],
    "source": [
-    "test_example=X_mask.tolist()\n",
-    "payload='{\"instances\":'+f\"{test_example}\"+' }'\n",
-    "cmd=f\"\"\"curl -d '{payload}' \\\n",
-    "   http://cifar10-classifier-default.{DEPLOY_NAMESPACE}:8000/v1/models/classifier/:predict \\\n",
-    "   -H \"Content-Type: application/json\"\n",
-    "\"\"\"\n",
-    "ret = Popen(cmd, shell=True,stdout=PIPE)\n",
-    "raw = ret.stdout.read().decode(\"utf-8\")\n",
-    "print(raw)\n",
-    "res=json.loads(raw)\n",
-    "arr=np.array(res[\"predictions\"])\n",
-    "plt.imshow(X_mask.reshape(32, 32, 3))\n",
-    "plt.axis('off')\n",
-    "plt.show()\n",
-    "print(\"class:\",class_names[y_train[idx][0]])\n",
-    "print(\"prediction:\",class_names[arr[0].argmax()])"
+    "def predict():\n",
+    "    test_example=X_mask.tolist()\n",
+    "    payload='{\"instances\":'+f\"{test_example}\"+' }'\n",
+    "    cmd=f\"\"\"curl -d '{payload}' \\\n",
+    "       http://cifar10-classifier-default.{DEPLOY_NAMESPACE}:8000/v1/models/classifier/:predict \\\n",
+    "       -H \"Content-Type: application/json\"\n",
+    "    \"\"\"\n",
+    "    ret = Popen(cmd, shell=True,stdout=PIPE)\n",
+    "    raw = ret.stdout.read().decode(\"utf-8\")\n",
+    "    print(raw)\n",
+    "    res=json.loads(raw)\n",
+    "    arr=np.array(res[\"predictions\"])\n",
+    "    plt.imshow(X_mask.reshape(32, 32, 3))\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n",
+    "    print(\"class:\",class_names[y_train[idx][0]])\n",
+    "    print(\"prediction:\",class_names[arr[0].argmax()])"
    ]
   },
   {
@@ -1117,6 +1118,7 @@
     "        return None\n",
     "j = None\n",
     "while j is None:\n",
+    "    predict()\n",
     "    print(\"Waiting for outlier logs, sleeping\")\n",
     "    time.sleep(2)\n",
     "    j = get_outlier_event_display_logs()\n",
@@ -1304,19 +1306,6 @@
    },
    "outputs": [],
    "source": [
-    "for i in tqdm(range(0,1000,50)):\n",
-    "    X = X_corr[i:i+50]\n",
-    "    predict(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "def get_drift_event_display_logs():\n",
     "    cmd=f\"kubectl logs $(kubectl get pod -l app=event-display -o jsonpath='{{.items[0].metadata.name}}' -n {DEPLOY_NAMESPACE}) -n {DEPLOY_NAMESPACE}\"\n",
     "    ret = Popen(cmd, shell=True,stdout=PIPE)\n",
@@ -1332,10 +1321,14 @@
     "    else:\n",
     "        return None\n",
     "j = None\n",
-    "while j is None:\n",
+    "for i in range(0,1000,50):\n",
+    "    X = X_corr[i:i+50]\n",
+    "    predict(X)\n",
     "    print(\"Waiting for drift logs, sleeping\")\n",
     "    time.sleep(2)\n",
     "    j = get_drift_event_display_logs()\n",
+    "    if j is not None:\n",
+    "        break\n",
     "    \n",
     "print(j)\n",
     "print(\"Drift\",j[\"data\"][\"is_drift\"]==1)"
