Generate Notebook output

--- a/samples/contrib/kubeflow-katib/early-stopping.ipynb
+++ b/samples/contrib/kubeflow-katib/early-stopping.ipynb
@@ -29,9 +29,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting pip\n",
+      "  Downloading pip-20.2.4-py2.py3-none-any.whl (1.5 MB)\n",
+      "\u001b[K     |████████████████████████████████| 1.5 MB 29.8 MB/s eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: pip\n",
+      "\u001b[33m  WARNING: The scripts pip, pip3 and pip3.6 are installed in '/home/jovyan/.local/bin' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
+      "Successfully installed pip-20.2.4\n",
+      "\u001b[33mWARNING: You are using pip version 20.0.2; however, version 20.2.4 is available.\n",
+      "You should consider upgrading via the '/usr/local/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting kfp==1.1.1\n",
+      "  Downloading kfp-1.1.1.tar.gz (162 kB)\n",
+      "\u001b[K     |████████████████████████████████| 162 kB 28.5 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: PyYAML in /usr/local/lib/python3.6/dist-packages (from kfp==1.1.1) (5.3)\n",
+      "Requirement already satisfied: google-cloud-storage>=1.13.0 in /usr/local/lib/python3.6/dist-packages (from kfp==1.1.1) (1.25.0)\n",
+      "Requirement already satisfied: kubernetes<12.0.0,>=8.0.0 in /usr/local/lib/python3.6/dist-packages (from kfp==1.1.1) (10.0.1)\n",
+      "Requirement already satisfied: google-auth>=1.6.1 in /usr/local/lib/python3.6/dist-packages (from kfp==1.1.1) (1.11.0)\n",
+      "Collecting requests_toolbelt>=0.8.0\n",
+      "  Downloading requests_toolbelt-0.9.1-py2.py3-none-any.whl (54 kB)\n",
+      "\u001b[K     |████████████████████████████████| 54 kB 2.6 MB/s  eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: cloudpickle in /usr/local/lib/python3.6/dist-packages (from kfp==1.1.1) (1.2.2)\n",
+      "Collecting kfp-server-api<2.0.0,>=0.2.5\n",
+      "  Downloading kfp-server-api-1.0.4.tar.gz (51 kB)\n",
+      "\u001b[K     |████████████████████████████████| 51 kB 834 kB/s  eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: jsonschema>=3.0.1 in /usr/local/lib/python3.6/dist-packages (from kfp==1.1.1) (3.2.0)\n",
+      "Collecting tabulate\n",
+      "  Downloading tabulate-0.8.7-py3-none-any.whl (24 kB)\n",
+      "Collecting click\n",
+      "  Downloading click-7.1.2-py2.py3-none-any.whl (82 kB)\n",
+      "\u001b[K     |████████████████████████████████| 82 kB 1.1 MB/s  eta 0:00:01\n",
+      "\u001b[?25hCollecting Deprecated\n",
+      "  Downloading Deprecated-1.2.10-py2.py3-none-any.whl (8.7 kB)\n",
+      "Collecting strip-hints\n",
+      "  Downloading strip-hints-0.1.9.tar.gz (30 kB)\n",
+      "Collecting docstring-parser>=0.7.3\n",
+      "  Downloading docstring_parser-0.7.3.tar.gz (13 kB)\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h    Preparing wheel metadata ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting kfp-pipeline-spec<0.2.0,>=0.1.0\n",
+      "  Downloading kfp_pipeline_spec-0.1.2-py3-none-any.whl (21 kB)\n",
+      "Requirement already satisfied: google-resumable-media<0.6dev,>=0.5.0 in /usr/local/lib/python3.6/dist-packages (from google-cloud-storage>=1.13.0->kfp==1.1.1) (0.5.0)\n",
+      "Requirement already satisfied: google-cloud-core<2.0dev,>=1.2.0 in /usr/local/lib/python3.6/dist-packages (from google-cloud-storage>=1.13.0->kfp==1.1.1) (1.3.0)\n",
+      "Requirement already satisfied: urllib3>=1.24.2 in /usr/local/lib/python3.6/dist-packages (from kubernetes<12.0.0,>=8.0.0->kfp==1.1.1) (1.25.8)\n",
+      "Requirement already satisfied: certifi>=14.05.14 in /usr/local/lib/python3.6/dist-packages (from kubernetes<12.0.0,>=8.0.0->kfp==1.1.1) (2019.11.28)\n",
+      "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from kubernetes<12.0.0,>=8.0.0->kfp==1.1.1) (2.22.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.5.3 in /usr/local/lib/python3.6/dist-packages (from kubernetes<12.0.0,>=8.0.0->kfp==1.1.1) (2.8.1)\n",
+      "Requirement already satisfied: setuptools>=21.0.0 in /usr/local/lib/python3.6/dist-packages (from kubernetes<12.0.0,>=8.0.0->kfp==1.1.1) (45.1.0)\n",
+      "Requirement already satisfied: requests-oauthlib in /usr/local/lib/python3.6/dist-packages (from kubernetes<12.0.0,>=8.0.0->kfp==1.1.1) (1.3.0)\n",
+      "Requirement already satisfied: six>=1.9.0 in /usr/lib/python3/dist-packages (from kubernetes<12.0.0,>=8.0.0->kfp==1.1.1) (1.11.0)\n",
+      "Requirement already satisfied: websocket-client!=0.40.0,!=0.41.*,!=0.42.*,>=0.32.0 in /usr/local/lib/python3.6/dist-packages (from kubernetes<12.0.0,>=8.0.0->kfp==1.1.1) (0.57.0)\n",
+      "Requirement already satisfied: rsa<4.1,>=3.1.4 in /usr/local/lib/python3.6/dist-packages (from google-auth>=1.6.1->kfp==1.1.1) (4.0)\n",
+      "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.6/dist-packages (from google-auth>=1.6.1->kfp==1.1.1) (0.2.8)\n",
+      "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from google-auth>=1.6.1->kfp==1.1.1) (4.0.0)\n",
+      "Requirement already satisfied: pyrsistent>=0.14.0 in /usr/local/lib/python3.6/dist-packages (from jsonschema>=3.0.1->kfp==1.1.1) (0.15.7)\n",
+      "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in /usr/local/lib/python3.6/dist-packages (from jsonschema>=3.0.1->kfp==1.1.1) (1.4.0)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /usr/local/lib/python3.6/dist-packages (from jsonschema>=3.0.1->kfp==1.1.1) (19.3.0)\n",
+      "Requirement already satisfied: wrapt<2,>=1.10 in /usr/local/lib/python3.6/dist-packages (from Deprecated->kfp==1.1.1) (1.11.2)\n",
+      "Requirement already satisfied: wheel in /usr/lib/python3/dist-packages (from strip-hints->kfp==1.1.1) (0.30.0)\n",
+      "Requirement already satisfied: google-api-core<2.0.0dev,>=1.16.0 in /usr/local/lib/python3.6/dist-packages (from google-cloud-core<2.0dev,>=1.2.0->google-cloud-storage>=1.13.0->kfp==1.1.1) (1.16.0)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->kubernetes<12.0.0,>=8.0.0->kfp==1.1.1) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /usr/lib/python3/dist-packages (from requests->kubernetes<12.0.0,>=8.0.0->kfp==1.1.1) (2.6)\n",
+      "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.6/dist-packages (from requests-oauthlib->kubernetes<12.0.0,>=8.0.0->kfp==1.1.1) (3.1.0)\n",
+      "Requirement already satisfied: pyasn1>=0.1.3 in /usr/local/lib/python3.6/dist-packages (from rsa<4.1,>=3.1.4->google-auth>=1.6.1->kfp==1.1.1) (0.4.8)\n",
+      "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.6/dist-packages (from importlib-metadata; python_version < \"3.8\"->jsonschema>=3.0.1->kfp==1.1.1) (2.1.0)\n",
+      "Requirement already satisfied: pytz in /usr/local/lib/python3.6/dist-packages (from google-api-core<2.0.0dev,>=1.16.0->google-cloud-core<2.0dev,>=1.2.0->google-cloud-storage>=1.13.0->kfp==1.1.1) (2019.3)\n",
+      "Requirement already satisfied: googleapis-common-protos<2.0dev,>=1.6.0 in /usr/local/lib/python3.6/dist-packages (from google-api-core<2.0.0dev,>=1.16.0->google-cloud-core<2.0dev,>=1.2.0->google-cloud-storage>=1.13.0->kfp==1.1.1) (1.51.0)\n",
+      "Requirement already satisfied: protobuf>=3.4.0 in /usr/local/lib/python3.6/dist-packages (from google-api-core<2.0.0dev,>=1.16.0->google-cloud-core<2.0dev,>=1.2.0->google-cloud-storage>=1.13.0->kfp==1.1.1) (3.11.2)\n",
+      "Building wheels for collected packages: kfp, kfp-server-api, strip-hints, docstring-parser\n",
+      "  Building wheel for kfp (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for kfp: filename=kfp-1.1.1-py3-none-any.whl size=222518 sha256=fb1b9c57347c719b959bc7a050b5ac35934103c9e88dbca4cd766a23541d98ee\n",
+      "  Stored in directory: /home/jovyan/.cache/pip/wheels/88/9f/b1/149db749eeb26a01ddc590b68d2b9c27a9c7eedb799f47d9f1\n",
+      "  Building wheel for kfp-server-api (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for kfp-server-api: filename=kfp_server_api-1.0.4-py3-none-any.whl size=105034 sha256=3e4447ed85c9e6a6786c45a3d90e075b5e073802d8d19637ddd3ffb1041b5b4f\n",
+      "  Stored in directory: /home/jovyan/.cache/pip/wheels/0f/50/2d/28c9ae498b2e5ff5bf5a9765bca3dcd08ab4a79333670de6cb\n",
+      "  Building wheel for strip-hints (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for strip-hints: filename=strip_hints-0.1.9-py2.py3-none-any.whl size=24671 sha256=b889718403a57c2cf94b11b2551646df123735f4e0126fdba88efee4e602382c\n",
+      "  Stored in directory: /home/jovyan/.cache/pip/wheels/21/6d/fa/7ed7c0560e1ef39ebabd5cc0241e7fca711660bae1ad752e2b\n",
+      "  Building wheel for docstring-parser (PEP 517) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for docstring-parser: filename=docstring_parser-0.7.3-py3-none-any.whl size=19230 sha256=36ea0c0c8aa0d328bad724d8f32f77d655408930529da2c3659a60f5be45c2c5\n",
+      "  Stored in directory: /home/jovyan/.cache/pip/wheels/32/63/02/bb6eebc5261f10a6de3dcf26336a7b2b8b8dc8cacb6c00f75f\n",
+      "Successfully built kfp kfp-server-api strip-hints docstring-parser\n",
+      "Installing collected packages: requests-toolbelt, kfp-server-api, tabulate, click, Deprecated, strip-hints, docstring-parser, kfp-pipeline-spec, kfp\n",
+      "\u001b[33m  WARNING: The script tabulate is installed in '/home/jovyan/.local/bin' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
+      "\u001b[33m  WARNING: The script strip-hints is installed in '/home/jovyan/.local/bin' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
+      "\u001b[33m  WARNING: The scripts dsl-compile, dsl-compile-v2 and kfp are installed in '/home/jovyan/.local/bin' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
+      "Successfully installed Deprecated-1.2.10 click-7.1.2 docstring-parser-0.7.3 kfp-1.1.1 kfp-pipeline-spec-0.1.2 kfp-server-api-1.0.4 requests-toolbelt-0.9.1 strip-hints-0.1.9 tabulate-0.8.7\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting kubeflow-katib==0.10.0\n",
+      "  Downloading kubeflow_katib-0.10.0-py3-none-any.whl (115 kB)\n",
+      "\u001b[K     |████████████████████████████████| 115 kB 33.4 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: setuptools>=21.0.0 in /usr/local/lib/python3.6/dist-packages (from kubeflow-katib==0.10.0) (45.1.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.5.3 in /usr/local/lib/python3.6/dist-packages (from kubeflow-katib==0.10.0) (2.8.1)\n",
+      "Requirement already satisfied: six>=1.10 in /usr/lib/python3/dist-packages (from kubeflow-katib==0.10.0) (1.11.0)\n",
+      "Requirement already satisfied: urllib3>=1.15.1 in /usr/local/lib/python3.6/dist-packages (from kubeflow-katib==0.10.0) (1.25.8)\n",
+      "Requirement already satisfied: certifi>=14.05.14 in /usr/local/lib/python3.6/dist-packages (from kubeflow-katib==0.10.0) (2019.11.28)\n",
+      "Requirement already satisfied: kubernetes==10.0.1 in /usr/local/lib/python3.6/dist-packages (from kubeflow-katib==0.10.0) (10.0.1)\n",
+      "Collecting table-logger>=0.3.5\n",
+      "  Downloading table_logger-0.3.6-py3-none-any.whl (14 kB)\n",
+      "Requirement already satisfied: requests-oauthlib in /usr/local/lib/python3.6/dist-packages (from kubernetes==10.0.1->kubeflow-katib==0.10.0) (1.3.0)\n",
+      "Requirement already satisfied: pyyaml>=3.12 in /usr/local/lib/python3.6/dist-packages (from kubernetes==10.0.1->kubeflow-katib==0.10.0) (5.3)\n",
+      "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from kubernetes==10.0.1->kubeflow-katib==0.10.0) (2.22.0)\n",
+      "Requirement already satisfied: google-auth>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from kubernetes==10.0.1->kubeflow-katib==0.10.0) (1.11.0)\n",
+      "Requirement already satisfied: websocket-client!=0.40.0,!=0.41.*,!=0.42.*,>=0.32.0 in /usr/local/lib/python3.6/dist-packages (from kubernetes==10.0.1->kubeflow-katib==0.10.0) (0.57.0)\n",
+      "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from table-logger>=0.3.5->kubeflow-katib==0.10.0) (1.18.1)\n",
+      "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.6/dist-packages (from requests-oauthlib->kubernetes==10.0.1->kubeflow-katib==0.10.0) (3.1.0)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->kubernetes==10.0.1->kubeflow-katib==0.10.0) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /usr/lib/python3/dist-packages (from requests->kubernetes==10.0.1->kubeflow-katib==0.10.0) (2.6)\n",
+      "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from google-auth>=1.0.1->kubernetes==10.0.1->kubeflow-katib==0.10.0) (4.0.0)\n",
+      "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.6/dist-packages (from google-auth>=1.0.1->kubernetes==10.0.1->kubeflow-katib==0.10.0) (0.2.8)\n",
+      "Requirement already satisfied: rsa<4.1,>=3.1.4 in /usr/local/lib/python3.6/dist-packages (from google-auth>=1.0.1->kubernetes==10.0.1->kubeflow-katib==0.10.0) (4.0)\n",
+      "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /usr/local/lib/python3.6/dist-packages (from pyasn1-modules>=0.2.1->google-auth>=1.0.1->kubernetes==10.0.1->kubeflow-katib==0.10.0) (0.4.8)\n",
+      "Installing collected packages: table-logger, kubeflow-katib\n",
+      "Successfully installed kubeflow-katib-0.10.0 table-logger-0.3.6\n"
+     ]
+    }
+   ],
    "source": [
     "# Update the PIP version.\n",
     "!python -m pip install --upgrade pip\n",
@@ -50,7 +175,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>Jupyter.notebook.kernel.restart()</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import display_html\n",
     "display_html(\"<script>Jupyter.notebook.kernel.restart()</script>\",raw=True)"
@@ -95,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,12 +315,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Define a Trial template.\n",
-    "\n",
     "# JSON template specification for the Trial's Worker Kubernetes Job.\n",
     "trial_spec={\n",
     "    \"apiVersion\": \"batch/v1\",\n",
@@ -219,7 +352,7 @@
     "}\n",
     "\n",
     "# Configure parameters for the Trial template.\n",
-    "# We set the retain parameter to \"true\" to not clean-up the Trial Job's Kubernetes Pods.\n",
+    "# We set the retain parameter to \"True\" to not clean-up the Trial Job's Kubernetes Pods.\n",
     "trial_template=V1beta1TrialTemplate(\n",
     "    retain=True,\n",
     "    primary_container_name=\"training-container\",\n",
@@ -256,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,12 +417,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get the Katib launcher.\n",
-    "katib_experiment_launcher_op = components.load_component_from_file(\"./component.yaml\")\n",
+    "katib_experiment_launcher_op = components.load_component_from_url(\n",
+    "    \"https://raw.githubusercontent.com/kubeflow/pipelines/master/components/kubeflow/katib-launcher/component.yaml\")\n",
     "\n",
     "@dsl.pipeline(\n",
     "    name=\"Launch Katib early stopping Experiment\",\n",
@@ -326,11 +460,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan/.local/lib/python3.6/site-packages/kfp/dsl/_container_op.py:1028: FutureWarning: Please create reusable components instead of constructing ContainerOp instances directly. Reusable components are shareable, portable and have compatibility and support guarantees. Please see the documentation: https://www.kubeflow.org/docs/pipelines/sdk/component-development/#writing-your-component-definition-file The components can be created manually (or, in case of python, using kfp.components.create_component_from_func or func_to_container_op) and then loaded using kfp.components.load_component_from_file, load_component_from_uri or load_component_from_text: https://kubeflow-pipelines.readthedocs.io/en/latest/source/kfp.components.html#kfp.components.load_component_from_file\n",
+      "  category=FutureWarning,\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -346,7 +488,7 @@
     {
      "data": {
       "text/html": [
-       "<a href=\"/pipeline/#/runs/details/c11f0f72-4812-4b92-a5d5-31954b73412a\" target=\"_blank\" >Run details</a>."
+       "<a href=\"/pipeline/#/runs/details/74872aec-904b-44ad-b299-7ab51a988d26\" target=\"_blank\" >Run details</a>."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -358,10 +500,10 @@
     {
      "data": {
       "text/plain": [
-       "RunPipelineResult(run_id=c11f0f72-4812-4b92-a5d5-31954b73412a)"
+       "RunPipelineResult(run_id=74872aec-904b-44ad-b299-7ab51a988d26)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
