--- a/samples/contrib/kubeflow-katib/early-stopping.ipynb
+++ b/samples/contrib/kubeflow-katib/early-stopping.ipynb
@@ -10,7 +10,7 @@
     "- Create Katib Experiment using random algorithm.\n",
     "- Use median stopping rule as an early stopping algorithm.\n",
     "- Use Kubernetes Job with mxnet mnist training container as a Trial template.\n",
-    "- Creating a Pipeline to get the optimal hyperparameters.\n",
+    "- Create Pipeline to get the optimal hyperparameters.\n",
     "\n",
     "Reference documentation:\n",
     "- https://kubeflow.org/docs/components/katib/experiment/#random-search\n",
@@ -225,7 +225,7 @@
    "source": [
     "## Define an Experiment\n",
     "\n",
-    "You have to create an Experiment object before deploying it. This experiment is similar to [this](https://github.com/kubeflow/katib/blob/master/examples/v1beta1/early-stopping/median-stop.yaml) YAML."
+    "You have to create an Experiment object before deploying it. This Experiment is similar to [this](https://github.com/kubeflow/katib/blob/master/examples/v1beta1/early-stopping/median-stop.yaml) YAML."
    ]
   },
   {
