Fixed the pipeline parameter type

--- a/samples/core/caching/caching.ipynb
+++ b/samples/core/caching/caching.ipynb
@@ -23,7 +23,7 @@
     "    return datetime.datetime.now().isoformat()\n",
     "\n",
     "\n",
-    "def caching_pipeline(seconds: int = 60):\n",
+    "def caching_pipeline(seconds: float = 60):\n",
     "    # All outputs of successfull executions are cached\n",
     "    work_task = do_work_op(seconds)\n"
    ],
@@ -88,7 +88,7 @@
     "# Cached results that are older than the specified time span, are not reused.\n",
     "# In this case, the pipeline should not reuse the cached result, since they will be stale.\n",
     "\n",
-    "def caching_pipeline3(seconds: int = 60):\n",
+    "def caching_pipeline3(seconds: float = 60):\n",
     "    # All outputs of successfull executions are cached\n",
     "    work_task = do_work_op(seconds)\n",
     "    # TODO(Ark-kun): Fix handling non-zero periods in the backend\n",
