Change Experiment spec structure to JsonObject

--- a/samples/contrib/kubeflow-katib/early-stopping.ipynb
+++ b/samples/contrib/kubeflow-katib/early-stopping.ipynb
@@ -436,7 +436,7 @@
     "    op = katib_experiment_launcher_op(\n",
     "        experiment_name=experiment_name,\n",
     "        experiment_namespace=experiment_namespace,\n",
-    "        experiment_spec=experiment_spec,\n",
+    "        experiment_spec=experiment_spec.to_dict(),\n",
     "        experiment_timeout_minutes=60,\n",
     "        delete_finished_experiment=False)\n",
     "    \n",
