Use built-in Katib API client serialization

--- a/samples/contrib/kubeflow-katib/early-stopping.ipynb
+++ b/samples/contrib/kubeflow-katib/early-stopping.ipynb
@@ -161,7 +161,7 @@
     "# Update the PIP version.\n",
     "!python -m pip install --upgrade pip\n",
     "!pip install kfp==1.1.1\n",
-    "!pip install kubeflow-katib==0.10.0"
+    "!pip install kubeflow-katib==0.10.1"
    ]
   },
   {
@@ -208,6 +208,7 @@
     "import kfp.dsl as dsl\n",
     "from kfp import components\n",
     "\n",
+    "from kubeflow.katib import ApiClient\n",
     "from kubeflow.katib import V1beta1ExperimentSpec\n",
     "from kubeflow.katib import V1beta1AlgorithmSpec\n",
     "from kubeflow.katib import V1beta1EarlyStoppingSpec\n",
@@ -433,10 +434,11 @@
     "def median_stop():\n",
     "    \n",
     "    # Katib launcher component.\n",
+    "    # Experiment Spec should be serialized to a valid Kubernetes object.\n",
     "    op = katib_experiment_launcher_op(\n",
     "        experiment_name=experiment_name,\n",
     "        experiment_namespace=experiment_namespace,\n",
-    "        experiment_spec=experiment_spec.to_dict(),\n",
+    "        experiment_spec=ApiClient().sanitize_for_serialization(experiment_spec),\n",
     "        experiment_timeout_minutes=60,\n",
     "        delete_finished_experiment=False)\n",
     "    \n",
